--- a/celebrity_faces/templates/results.html
+++ b/celebrity_faces/templates/results.html
@@ -5,7 +5,7 @@
         <h4 class="card-body">{{ img.name }}</h4>
         <div block="inline">
             <img id="{{ img.name }}" src="{{ img.path }}" title="{{ img.name }}" style="margin-left: 5px">
-            <img id="{{ gan }}" src="{{ gan }}" title="{{ gan }}" style="margin-left: 5px">
+            <img id="{{ img.gan }}" src="{{ img.gan }}" title="{{ img.gan }}" style="margin-left: 5px">
             {% for neighbor in img.neighbors %}
                 <img id="{{ neighbor }}" src="{{ neighbor }}" title="{{ neighbor }}" style="margin-left: 5px">
             {% endfor %}
